fix: 优化流处理器的线程管理，使用volatile修饰streamingThread以提高可见性，并确保守护线程在Spring关闭时不会阻止JVM退出